minor abstract change

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     But how do we measure progress towards this goal of policy generalization in practice?
                     Evaluating and quantifying generalization is the Wild West of modern robotics, with each work proposing and measuring different types of generalization in their own, often difficult to reproduce, settings.
                     In this work, our goal is (1) to outline the forms of generalization we believe are important in robot manipulation in a comprehensive and fine-grained manner, and (2) to provide reproducible guidelines for measuring these notions of generalization.
-                    We first propose ★-Gen, a taxonomy of generalization for robot manipulation structured around semantic, visual, and behavioral generalization.
+                    We first propose ★-Gen, a taxonomy of generalization for robot manipulation structured around visual, semantic, and behavioral generalization.
                     We discuss how our taxonomy encompasses most prior notions of generalization in robotics.
                     Next, we instantiate ★-Gen with a concrete real-world benchmark based on the widely-used Bridge V2 dataset.
                     We evaluate a variety of state-of-the-art models on this benchmark to demonstrate the utility of our taxonomy in practice.
