--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <!-- <base href="/"> -->
 
         <!--FACEBOOK-->
-    <meta property="og:image" content="https://generalization-taxonomy.github.io/img/STAR-GEN/axes_v3.png">
+    <meta property="og:image" content="https://stargen-taxonomy.github.io/img/STAR-GEN/axes_v3.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="682">
     <meta property="og:image:height" content="682">
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://generalization-taxonomy.github.io/"/>
+    <meta property="og:url" content="https://stargen-taxonomy.github.io/"/>
     <meta property="og:title" content="A Taxonomy for Evaluating Generalist Robot Policies" />
     <meta property="og:description" content="Project page for A Taxonomy for Evaluating Generalist Robot Policies." />
 
@@ -114,7 +114,7 @@
             <div class="col-md-12">
                 <ul class="nav nav-pills nav-justified">
                     <li>
-                        <a href="https://arxiv.org/" target="_blank">  <!-- TODO -->
+                        <a href="https://arxiv.org/abs/2503.01238" target="_blank">
                         <image src="img/paper.png" height="60px">
                             <h4><strong>Paper</strong></h4>
                         </a>
@@ -142,7 +142,7 @@
         </div>
 
         <div style="width: 90%; float: center; text-align:center; margin: 0 auto">
-            <a href="https://generalization-taxonomy.github.io/img/STAR-GEN/axes_v3.png" target="_blank">
+            <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/axes_v3.png" target="_blank">
                 <figure>
                     <img src="img/STAR-GEN/axes_v3.png" class="img-responsive">
                 </figure>
@@ -208,7 +208,7 @@
                 </p>
 
                 <div style="width: 90%; float: center; text-align:center; margin: 0 auto">
-                    <a href="https://generalization-taxonomy.github.io/img/STAR-GEN/detailed_axes.png" target="_blank">
+                    <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/detailed_axes.png" target="_blank">
                         <figure>
                             <img src="img/STAR-GEN/detailed_axes.png" class="img-responsive">
                         </figure>
@@ -222,7 +222,7 @@
                 </p>
 
                 <div style="width: 90%; float: center; text-align:center; margin: 0 auto">
-                    <a href="https://generalization-taxonomy.github.io/img/STAR-GEN/comparison_table.png" target="_blank">
+                    <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/comparison_table.png" target="_blank">
                         <figure>
                             <img src="img/STAR-GEN/comparison_table.png" class="img-responsive">
                         </figure>
@@ -309,7 +309,7 @@
 
                 <div style="width: 40%; float: left; text-align:center; margin: 0 auto; display: inline-block">
                     <div style="width: 95%; float: left; text-align:center; margin: 0 auto">
-                        <a href="https://generalization-taxonomy.github.io/img/STAR-GEN/results/main.png" target="_blank">
+                        <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/results/main.png" target="_blank">
                             <figure>
                                 <img src="img/STAR-GEN/results/main.png" class="img-responsive">
                             </figure>
@@ -368,7 +368,7 @@
 
                 <div style="width: 50%; float: left; text-align:center; margin: 0 auto; display: inline-block">
                     <div style="width: 95%; float: left; text-align:center; margin: 0 auto">
-                        <a href="https://generalization-taxonomy.github.io/img/STAR-GEN/results/bridge_vs_oxe.png" target="_blank">
+                        <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/results/bridge_vs_oxe.png" target="_blank">
                             <figure>
                                 <img src="img/STAR-GEN/results/bridge_vs_oxe.png" class="img-responsive">
                             </figure>
@@ -387,7 +387,7 @@
 
                 <div style="width: 50%; float: left; text-align:center; margin: 0 auto; display: inline-block">
                     <div style="width: 95%; float: left; text-align:left; margin: 0 auto">
-                        <a href="https://generalization-taxonomy.github.io/img/STAR-GEN/results/llm_scaling.png" target="_blank">
+                        <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/results/llm_scaling.png" target="_blank">
                             <figure>
                                 <img src="img/STAR-GEN/results/llm_scaling.png" class="img-responsive">
                             </figure>
@@ -406,7 +406,7 @@
 
                 <div style="width: 50%; float: left; text-align:center; margin: 0 auto; display: inline-block">
                     <div style="width: 95%; float: left; text-align:center; margin: 0 auto">
-                        <a href="https://generalization-taxonomy.github.io/img/STAR-GEN/results/vqa_coft.png" target="_blank">
+                        <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/results/vqa_coft.png" target="_blank">
                             <figure>
                                 <img src="img/STAR-GEN/results/vqa_coft.png" class="img-responsive">
                             </figure>
@@ -427,7 +427,7 @@
 
                 <div style="width: 50%; float: left; text-align:center; margin: 0 auto; display: inline-block">
                     <div style="width: 95%; float: left; text-align:center; margin: 0 auto">
-                        <a href="https://generalization-taxonomy.github.io/img/STAR-GEN/results/vq_vs_binning.png" target="_blank">
+                        <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/results/vq_vs_binning.png" target="_blank">
                             <figure>
                                 <img src="img/STAR-GEN/results/vq_vs_binning.png" class="img-responsive">
                             </figure>
