reduce image sizes

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div>
         </div>
 
-        <div style="width: 90%; float: center; text-align:center; margin: 0 auto">
+        <div style="width: 70%; float: center; text-align:center; margin: 0 auto">
             <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/axes_v3.png" target="_blank">
                 <figure>
                     <img src="img/STAR-GEN/axes_v3.png" class="img-responsive">
@@ -207,7 +207,7 @@
                     We further group different perturbations in each category into human-interpretable <b>axes</b> of generalization. Below you can find the axes we have enumerated for each category of generalization.
                 </p>
 
-                <div style="width: 90%; float: center; text-align:center; margin: 0 auto">
+                <div style="width: 70%; float: center; text-align:center; margin: 0 auto">
                     <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/detailed_axes.png" target="_blank">
                         <figure>
                             <img src="img/STAR-GEN/detailed_axes.png" class="img-responsive">
@@ -221,7 +221,7 @@
                     These axes span a wide range of possible perturbations, and we show below that ★-Gen encompasses notions of generalization in prior work:
                 </p>
 
-                <div style="width: 90%; float: center; text-align:center; margin: 0 auto">
+                <div style="width: 80%; float: center; text-align:center; margin: 0 auto">
                     <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/comparison_table.png" target="_blank">
                         <figure>
                             <img src="img/STAR-GEN/comparison_table.png" class="img-responsive">
@@ -367,7 +367,7 @@
             <div class="col-md-12">
 
                 <div style="width: 50%; float: left; text-align:center; margin: 0 auto; display: inline-block">
-                    <div style="width: 95%; float: left; text-align:center; margin: 0 auto">
+                    <div style="width: 80%; float: left; text-align:center; margin: 0 auto">
                         <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/results/bridge_vs_oxe.png" target="_blank">
                             <figure>
                                 <img src="img/STAR-GEN/results/bridge_vs_oxe.png" class="img-responsive">
@@ -378,15 +378,14 @@
                             from Open X-Embodiment (OXE). Consistent with prior work, we find that
                             larger and more diverse robot datasets can significantly improve
                             overall generalization. However, while
-                            generalization improves along several axes (especially some
-                            <b>semantic</b> and <b>visual</b> axes), those that the Bridge-only model
+                            generalization improves along several axes, those that the Bridge-only model
                             struggled with the most (e.g., Viewpoint, Morphed Objects,
                             Multi-Object Referencing) do not improve significantly.</figcaption>
                     </div>
                 </div>
 
                 <div style="width: 50%; float: left; text-align:center; margin: 0 auto; display: inline-block">
-                    <div style="width: 95%; float: left; text-align:left; margin: 0 auto">
+                    <div style="width: 80%; float: left; text-align:left; margin: 0 auto">
                         <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/results/llm_scaling.png" target="_blank">
                             <figure>
                                 <img src="img/STAR-GEN/results/llm_scaling.png" class="img-responsive">
@@ -405,7 +404,7 @@
 
 
                 <div style="width: 50%; float: left; text-align:center; margin: 0 auto; display: inline-block">
-                    <div style="width: 95%; float: left; text-align:center; margin: 0 auto">
+                    <div style="width: 80%; float: left; text-align:center; margin: 0 auto">
                         <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/results/vqa_coft.png" target="_blank">
                             <figure>
                                 <img src="img/STAR-GEN/results/vqa_coft.png" class="img-responsive">
@@ -426,7 +425,7 @@
                 </div>
 
                 <div style="width: 50%; float: left; text-align:center; margin: 0 auto; display: inline-block">
-                    <div style="width: 95%; float: left; text-align:center; margin: 0 auto">
+                    <div style="width: 80%; float: left; text-align:center; margin: 0 auto">
                         <a href="https://stargen-taxonomy.github.io/img/STAR-GEN/results/vq_vs_binning.png" target="_blank">
                             <figure>
                                 <img src="img/STAR-GEN/results/vq_vs_binning.png" class="img-responsive">
